--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ wp-content/themes/twenty*/
 
 # ignore node dependency directories
 node_modules/
+build
 
 # ignore log files and databases
 *.log
