--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ wp-content/themes/twenty*/
 # ignore node dependency directories
 node_modules/
 build
+dist/*
 
 # ignore log files and databases
 *.log
