--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "node-sass": "^4.14.1",
     "node-sass-glob-importer": "^5.3.2",
     "po2json": "^1.0.0-alpha",
-    "postcss": "7.0.13",
+    "postcss": "^8.3.5",
     "postcss-color-function": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "prettier-stylelint": "^0.4.2",
