--- a/.github/workflows/pr-unit-tests.yml
+++ b/.github/workflows/pr-unit-tests.yml
@@ -52,8 +52,8 @@ jobs:
             ./vendor
           key: ${{ runner.os }}-${{ hashFiles('./composer.lock') }}
 
-      - name: Setup and install composer
-        run: composer install
+      - name: Setup and update composer
+        run: composer update
 
       - name: Add PHP8 Compatibility.
         run: |
