--- a/.github/workflows/pr-unit-tests.yml
+++ b/.github/workflows/pr-unit-tests.yml
@@ -12,6 +12,8 @@ jobs:
         php: [ '7.0', '7.1', '7.2', '7.3', '7.4', '8.0' ]
         wp: [ "latest" ]
         include:
+          - wp: nightly
+            php: '7.4'
           - wp: '5.5'
             php: 7.2
           - wp: '5.4'
@@ -50,8 +52,8 @@ jobs:
             ./vendor
           key: ${{ runner.os }}-${{ hashFiles('./composer.lock') }}
 
-      - name: Setup and update composer
-        run: composer update
+      - name: Setup and install composer
+        run: composer install
 
       - name: Add PHP8 Compatibility.
         run: |
@@ -66,4 +68,5 @@ jobs:
         run: ./tests/bin/install.sh woo_test root root 127.0.0.1 ${{ matrix.wp }}
 
       - name: Run tests
+        run: composer update
         run: ./vendor/bin/phpunit -c ./phpunit.xml
