Added composer update command

--- a/.github/workflows/pr-unit-tests.yml
+++ b/.github/workflows/pr-unit-tests.yml
@@ -67,6 +67,8 @@ jobs:
       - name: Init DB and WP
         run: ./tests/bin/install.sh woo_test root root 127.0.0.1 ${{ matrix.wp }}
 
-      - name: Run tests
+      - name: Composer update
         run: composer update
+
+      - name: Run tests
         run: ./vendor/bin/phpunit -c ./phpunit.xml
