--- a/.github/workflows/pr-unit-tests.yml
+++ b/.github/workflows/pr-unit-tests.yml
@@ -1,5 +1,5 @@
 name: Run unit tests on PR
-on: 
+on:
   pull_request
 jobs:
   test:
@@ -62,10 +62,13 @@ jobs:
              unzip -d /tmp/phpunit-7.5-fork /tmp/phpunit-7.5-fork.zip
              composer bin phpunit config --unset platform
              composer bin phpunit config repositories.0 '{"type": "path", "url": "/tmp/phpunit-7.5-fork/phpunit-add-compatibility-with-php8-to-phpunit-7", "options": {"symlink": false}}'
-             composer bin phpunit require --dev -W phpunit/phpunit:@dev --ignore-platform-reqs    
-           fi 
+             composer bin phpunit require --dev -W phpunit/phpunit:@dev --ignore-platform-reqs
+           fi
       - name: Init DB and WP
         run: ./tests/bin/install.sh woo_test root root 127.0.0.1 ${{ matrix.wp }}
+
+      - name: Setup and update composer
+      run: composer update
 
       - name: Run tests
         run: ./vendor/bin/phpunit -c ./phpunit.xml
