--- a/.github/workflows/pr-unit-tests.yml
+++ b/.github/workflows/pr-unit-tests.yml
@@ -12,8 +12,8 @@ jobs:
         php: [ '7.0', '7.1', '7.2', '7.3', '7.4', '8.0' ]
         wp: [ "latest" ]
         include:
-          - wp: nightly
-            php: '7.4'
+          - wp: '7.4'
+            php: 7.4
           - wp: '5.5'
             php: 7.2
           - wp: '5.4'
