--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
     "react-datetime": "^3.0.4",
+    "react-responsive-masonry": "^2.1.7",
     "react-select": "^3.1.0",
     "react-transition-group": "^4.4.2",
     "style-it": "^2.1.4",
